--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ build/
 cdekdelivery.4.2.5.zip
 cdekdelivery.4.2.5/**
 cdekdelivery.4.2.5/
+
+woocommerce.10.5.2.zip
+woocommerce.10.5.2/**
+woocommerce.10.5.2/
