--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ cdekdelivery.4.2.5/
 woocommerce.10.5.2.zip
 woocommerce.10.5.2/**
 woocommerce.10.5.2/
+
+tbank-woocommerce (1).zip
+tbank-woocommerce/**
+tbank-woocommerce/
